# ssb-klass-python

./: .bumpversion.cfg  .cookiecutter.json  .cruft.json  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEV_README.md  LICENSE.md  README.md  SECURITY.md  _klass_old_functions.py  _meeting_notes_ideas.txt  noxfile.py  pyproject.toml  sonar-project.properties  testing_testersons.ipynb
.github/workflows/: constraints.txt  docs.yml  labeler.yml  nox_push.yml  release.yml  test_push.yml  tests.yml
demo/: classification.ipynb  classification.py  clipboard.ipynb  config.ipynb  config.py  correspondance.ipynb  correspondance_from_parameters.ipynb  correspondence.ipynb  correspondence.py  family.ipynb  family.py  gui_ipywidgets.ipynb  gui_ipywidgets.py  join_kommune_fylke.ipynb  join_kommune_fylke.py  left_join_kommune_fylke.ipynb  magne_wide_codes.ipynb  manual_testing_classes.ipynb  manual_testing_classification.ipynb  manual_testing_family.ipynb  manual_testing_requestfunctions.ipynb  quarter_seb.ipynb  quarter_seb.py  requestfunctions.ipynb  requestfunctions.py  rewrite_base_responses.ipynb  search.ipynb  search.py  search_widget_experiment.ipynb  variant.ipynb  variant.py  version.ipynb  version.py  widget.ipynb  widget.py
docs/: conf.py  index.md  klass.classes.rst  klass.requests.rst  klass.widgets.rst  reference.md
klass/: __init__.py  classification.py  klass_config.py  klass_config.toml  klass_requests.py  load_config.py  manual_testing_requestfunctions.ipynb  sections.py  validate.py
klass/classes/: classification.py  codes.py  correspondance.py  family.py  search.py  variant.py  version.py
klass/requests/: klass_requests.py  sections.py  validate.py
klass/utility/: classification.py  codes.py
klass/widgets/: search_ipywidget.py
src/klass/: __init__.py  config.py  klass_config.py
src/klass/classes/: __init__.py  classification.py  codes.py  correspondence.py  family.py  search.py  variant.py  version.py
src/klass/requests/: __init__.py  klass_requests.py  klass_types.py  sections.py  types.py  validate.py
src/klass/utility/: classification.py  cleanup.py  codes.py  filters.py  naming.py
src/klass/widgets/: __init__.py  search_ipywidget.py
tests/: __init__.py  conftest.py  mock_request_functions.py  mock_response_data.py  mock_responses.py  test_classification_search.py  test_classifications.py  test_cleanup.py  test_codes.py  test_corresponds.py  test_family.py  test_naming.py  test_package.py  test_request_functions.py  test_variant.py  test_variant_search.py  test_version.py  test_widget.py
