[tool.poetry]
name = "ssb-klass-python"
version = "0.0.7"
description = "A Python package built on top of KLASS's API for retrieving classifications, codes, correspondences etc."
authors = ["Carl Corneil <cfc@ssb.no>"]
license = "MIT"
readme = "README.md"
packages = [{include = "klass", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
dapla-toolbelt = ">=1.3.2"
python-dateutil = ">=2.8.2"
toml = ">=0.10.2"
ipywidgets = ">=8.0.6"
pandas = ">=1.5.3"
requests = ">=2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.1.3"
ipykernel = ">=6.15.3"
autoflake = ">=1.7.6"
pep8-naming = ">=0.13.2"
pyupgrade = ">=3.1.0"
isort = ">=5.12.0"
flake8-logging-format = ">=0.8.1"
flake8-eradicate = ">=1.4.0"
flake8-debugger = ">=4.1.2"
flake8-comprehensions = ">=3.10.0"
flake8-builtins = ">=2.0.0"
flake8-bugbear = ">=22.9.23"
flake8 = "^5.0.4"
bump2version = ">=1.0.1"
pytest-cov = ">=5.0.0"
mypy = ">=0.982"
pyproject-flake8 = ">=5.0.4.post1"
pre-commit = ">=3.3.1"
pre-commit-hooks = ">=4.4.0"
nox = ">=2023.4.22"
nox-poetry = ">=1.0.3"
black = {extras = ["jupyter"], version = ">=24.4.2"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
force_single_line = true
skip_gitignore = true
lines_after_imports = 2
# The line below is needed for jupyter notebooks stored as .py in percent format.
# See https://github.com/PyCQA/isort/issues/1338 for details
treat_comments_as_code = ["# %%"]

[tool.jupytext]
formats = "ipynb,auto:percent"
notebook_metadata_filter = "jupytext.text_representation,-jupytext.text_representation.jupytext_version,-widgets,-varInspector"
cell_metadata_filter = "-papermill,tags"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
